--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
         <input type="text" name="username" class="form-control" />
     </div>
     <div class="form-group">
-        <label for="password">Password</label>
+        <label for="password">Contraseña</label>
         <input type="password" name="password" class="form-control" />
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
