--- a/Views/Home/Delete.cshtml
+++ b/Views/Home/Delete.cshtml
@@ -3,7 +3,7 @@
 
 <h1>Eliminar Productos</h1>
 
-<h3> Está seguro que desea eliminar este producto? </h3>
+<h3> ¿Está seguro que desea eliminar este producto? </h3>
 
 <div>
     <h4>Producto</h4>
@@ -13,29 +13,30 @@
             id
         </dt>
         <dd class="col-sm-10">
-            @Model.id
+            @Model.Id
         </dd>
         <dt class="col-sm-2">
             name
         </dt>
         <dd class="col-sm-10">
-            @Model.name
+            @Model.Name
         <dt class="col-sm-2">
             price
         </dt>
         <dd class="col-sm-10">
-                @Model.price
+            @Model.Price
+        </dd>
+        <dt class="col-sm-2">
+            details
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Details
+        </dd>
     </dl>
-    <dt class="col-sm-2">
-        details
-    </dt>
-    <dd class="col-sm-10">
-        @Model.details
-       </dl>
 </div>
 
 <form asp-action="DeleteConfirmed">
-    <input type="hidden" asp-for="id" />
+    <input type="hidden" asp-for="Id" />
     <id class="form-group">
         <input type="submit" value="Eliminar" class="btn btn-danger" />
         <a asp-action="Index">Volver a la lista</a>
