--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -1,38 +1,65 @@
 ﻿@model ProyectoProgramacionAvanzada.Models.Product
 
-<h1>Detalles de los Productos</h1>
+<div class="container mt-4" style="margin-bottom: 300px;">
+    <div class="row">
+        <div class="col-md-6">
+            @*if (Model.Images != null && Model.Images.Any())
+            {
+                <div id="productCarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                         @for (var i = 0; i < Model.Images.Count; i++)
+                        {
+                            var image = Model.Images[i];
+                            <div class="carousel-item @(i == 0 ? "active" : "")">
+                                <img src="data:image/jpeg;base64,@image.ImageBase64" class="d-block w-100" alt="Product Image @i">
+                            </div>
+                        }
+                    </div>
+                    <a class="carousel-control-prev" href="#productCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#productCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            }
+            else
+            {*@
 
-<div>
-    <h4>Producto</h4>
-    <hr />
-    <dl class="row">
-        <dt>
-            id
-        </dt>
-        <dd>
-            @Model.id
-        </dd>
-        <dt>
-            name
-        </dt>
-        <dd>
-            @Model.name
-        </dd>
-        <dt>
-            price
-        </dt>
-        <dd>
-            @Model.price
-        </dd>
-        <dt>
-            details
-        </dt>
-        <dd>
-            @Model.details
-    </dl>
+                <div id="staticCarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://btcr.cr/wp-content/uploads/2023/11/WhatsApp-Image-2023-11-17-at-4.50.18-PM.jpeg" class="d-block w-100" alt="Static Image 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://btcr.cr/wp-content/uploads/2023/11/WhatsApp-Image-2023-11-17-at-4.50.18-PM-1.jpeg" class="d-block w-100" alt="Static Image 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://btcr.cr/wp-content/uploads/2023/11/WhatsApp-Image-2023-11-17-at-4.50.18-PM-2.jpeg" class="d-block w-100" alt="Static Image 3">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#staticCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#staticCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            @* } *@
+        </div>
+        <div class="col-md-6">
+            <h1>@Model.Name</h1>
+            <p><strong>Price:</strong> $@Model.Price</p>
+            <p><strong>Details:</strong> @Model.Details</p>
+            <a asp-action="Index" class="btn btn-secondary">Volver</a>
+
+        </div>
+    </div>
 </div>
 
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.id">Editar</a>
-    <a asp-action="Index">Volver a la lista</a>
-</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
