--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -14,19 +14,22 @@
                 <div class="card-body">
                     <form asp-action="Edit">
                         <div class="form-group">
-                            <label asp-for="name" class="control-label">Nombre</label>
-                            <input asp-for="name" class="form-control" />
-                            <span asp-validation-for="name" class="text-danger"></span>
+                            <input asp-for="Id" type="hidden" />
                         </div>
                         <div class="form-group">
-                            <label asp-for="price" class="control-label">Precio</label>
-                            <input asp-for="price" class="form-control" />
-                            <span asp-validation-for="price" class="text-danger"></span>
+                            <label asp-for="Name" class="control-label">Nombre</label>
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="details" class="control-label">Detalle</label>
-                            <input asp-for="details" class="form-control" />
-                            <span asp-validation-for="details" class="text-danger"></span>
+                            <label asp-for="Price" class="control-label">Precio</label>
+                            <input asp-for="Price" class="form-control" />
+                            <span asp-validation-for="Price" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Details" class="control-label">Detalle</label>
+                            <input asp-for="Details" class="form-control" />
+                            <span asp-validation-for="Details" class="text-danger"></span>
                         </div>
                         <hr>
                         <div class="form-group text-center">
